syntax = "proto3";

package arenabuddy;

// Card represents a Magic: The Gathering card
message Card {
  // Unique card identifier, set by MtG: Arena
  int64 id = 1;
  // Set code (e.g., "pio", "lci")
  string set = 2;
  // Card name
  string name = 3;
  // Language code (e.g., "en")
  string lang = 4;
  // URL to card image
  string image_uri = 5;
  // Mana cost string (e.g., "{1}{W}")
  string mana_cost = 6;
  // Converted mana cost
  int32 cmc = 7;
  // Card type (e.g., "Instant", "Creature â€” Otter Wizard")
  string type_line = 8;
  // Card layout type (e.g., "normal", "split")
  string layout = 9;
  // Color array (e.g., ["R"], ["B", "W"])
  repeated string colors = 10;
  // Color identity array
  repeated string color_identity = 11;
  // Card faces for multi-faced cards
  repeated CardFace card_faces = 12;
}

// CardFace represents one face of a split card or other multi-face cards
message CardFace {
  // Face name
  string name = 1;
  // Face type
  string type_line = 2;
  // Face mana cost
  string mana_cost = 3;
  // Optional face-specific image
  optional string image_uri = 4;
  // Face colors
  repeated string colors = 5;
}

// CardCollection represents a collection of MTG cards
message CardCollection {
  repeated Card cards = 1;
}
